--- a/hello-world/pyproject.toml
+++ b/hello-world/pyproject.toml
@@ -6,10 +6,9 @@ authors = [
     {name = "Your Name",email = "you@example.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.9"
 dependencies = [
 ]
-
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -17,3 +16,13 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 hello-world = "hello_world.main:main"
+
+[tool.poetry.dependencies]
+python = ">=3.9"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^6.0.0"
+pytest-cov = "^3.0.0"
+black = "^22.0.0"
+flake8 = "^3.9.0"
+mypy = "^0.910"
